Installed and implemented postman and captcha

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,2 @@
-SMTP_HOST = "smtp.smtpprovider.com"
-SMTP_PORT = port
-SMTP_USERNAME = "email@yourdomain.com"
-SMTP_PASSWORD = "password"
+RECAPTCHA_SECRET = ''
+POSTMARKKEY = '
