--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
         "vlucas/phpdotenv": "^5.5",
         "php-http/guzzle7-adapter": "^1.0",
         "nyholm/psr7": "^1.8",
-        "getbrevo/brevo-php": "^1.0"
+        "getbrevo/brevo-php": "^1.0",
+        "wildbit/postmark-php": "^4.0"
     },
     "config": {
         "allow-plugins": {
